--- a/package.json
+++ b/package.json
@@ -10,16 +10,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "^4.0.1",
+    "@expo/vector-icons": "^14.0.4",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.15",
-    "expo": "~52.0.37",
+    "@react-navigation/stack": "^7.1.2",
+    "@react-pdf/renderer": "^4.3.0",
+    "axios": "^1.8.2",
+    "events": "^3.3.0",
+    "expo": "^52.0.38",
+    "expo-print": "^14.0.3",
+    "expo-sharing": "^13.0.1",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
-    "react-native-gesture-handler": "^2.24.0",
-    "react-native-reanimated": "^3.17.1",
-    "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.9.1",
+    "react-native-gesture-handler": "^2.20.2",
+    "react-native-reanimated": "^3.16.1",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "^4.4.0",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
